--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -23,7 +23,7 @@ server {
 
     # Root homepage (static file served by nginx)
     location = / {
-        root /usr/share/nginx/html;
+        root /etc/nginx/html;
         index index.html;
     }
 
