--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -29,7 +29,7 @@ server {
 
     # Proxy /visualizer/* to the Dash service (supports websockets)
     location /visualizer/ {
-        proxy_pass http://prediction_visualizer:8050/;
+        proxy_pass http://prediction_visualizer:8050;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
@@ -51,7 +51,7 @@ server {
 
     # Proxy for the real estate MCP service (accepts trailing slash and subpaths)
     location /real-estate-chat/ {
-        proxy_pass http://real_estate_mcp:8060/;
+        proxy_pass http://real_estate_mcp:8060;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
