--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -27,8 +27,8 @@ server {
         index index.html;
     }
 
-    # Proxy /visualizer/* to the Dash service (supports websockets)
-    location /visualizer/ {
+    # Proxy /visualizer and subpaths to the Dash service (supports websockets)
+    location ^~ /visualizer {
         proxy_pass http://prediction_visualizer:8050;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
@@ -39,18 +39,8 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Ensure /visualizer redirects to trailing slash
-    location = /visualizer {
-        return 301 /visualizer/;
-    }
-
-    # Ensure /real-estate-chat redirects to trailing slash
-    location = /real-estate-chat {
-        return 301 /real-estate-chat/;
-    }
-
-    # Proxy for the real estate MCP service (accepts trailing slash and subpaths)
-    location /real-estate-chat/ {
+    # Proxy for the real estate MCP service (accepts both /real-estate-chat and subpaths)
+    location ^~ /real-estate-chat {
         proxy_pass http://real_estate_mcp:8060;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
